# django-project-template

./: .editorconfig  .gitignore  Dockerfile  LICENSE  docker-compose.yaml  gunicorn.logconfig  pyproject.toml  run.sh
src/server/: urls.py
src/server/settings/: __init__.py  development.py  production.py
